--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp9-FN-pCP">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Collect-->
@@ -81,17 +80,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="F1S-aM-6hz">
-                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="F1S-aM-6hz">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <color key="backgroundColor" red="0.71174349059999997" green="1" blue="0.54481240639999995" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="487" id="8Bl-TN-FUh"/>
-                                    <constraint firstAttribute="width" secondItem="F1S-aM-6hz" secondAttribute="height" multiplier="600:487" id="CZN-8I-gpC"/>
-                                    <constraint firstAttribute="width" constant="600" id="CpK-O3-Kwc"/>
-                                    <constraint firstAttribute="height" constant="487" id="Rxg-hr-II8"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="SWN-ck-gEi">
-                                    <size key="itemSize" width="501" height="90"/>
+                                    <size key="itemSize" width="301" height="90"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -101,36 +94,37 @@
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="501" height="90"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="301" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TEMPFoodIcon" translatesAutoresizingMaskIntoConstraints="NO" id="PRi-xz-AS1">
-                                                    <rect key="frame" x="337" y="1" width="88" height="88"/>
+                                                    <rect key="frame" x="212" y="1" width="88" height="88"/>
                                                     <color key="backgroundColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PR-vp-DHe">
-                                                    <rect key="frame" x="141" y="8" width="241" height="46.5"/>
-                                                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="25"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JS-sO-3EK">
-                                                    <rect key="frame" x="194" y="46" width="349" height="20.5"/>
+                                                    <rect key="frame" x="25" y="46" width="179" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OjG-g6-qJx">
+                                                    <rect key="frame" x="0.0" y="89" width="301" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Green-dot" translatesAutoresizingMaskIntoConstraints="NO" id="VJr-uC-AAG">
-                                                    <rect key="frame" x="143" y="54" width="7" height="7"/>
+                                                    <rect key="frame" x="8" y="54" width="7" height="7"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PR-vp-DHe">
+                                                    <rect key="frame" x="8" y="0.0" width="196" height="47"/>
+                                                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="22"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <size key="customSize" width="501" height="90"/>
+                                        <size key="customSize" width="301" height="90"/>
                                         <connections>
                                             <outlet property="FCPublisherEventImage" destination="PRi-xz-AS1" id="NJS-Nv-NR7"/>
                                             <outlet property="FCPublisherEventStatus" destination="7JS-sO-3EK" id="aWm-kA-q15"/>
@@ -147,15 +141,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="F1S-aM-6hz" firstAttribute="top" secondItem="wYH-Xz-JC6" secondAttribute="bottom" id="FET-rE-aNC"/>
-                            <constraint firstAttribute="bottom" secondItem="F1S-aM-6hz" secondAttribute="bottom" constant="49" id="Jrt-Wg-zoy"/>
-                            <constraint firstAttribute="trailing" secondItem="F1S-aM-6hz" secondAttribute="trailing" id="VuB-H5-l9T"/>
-                            <constraint firstAttribute="trailing" secondItem="F1S-aM-6hz" secondAttribute="trailing" id="XDP-XF-NUP"/>
-                            <constraint firstAttribute="centerX" secondItem="F1S-aM-6hz" secondAttribute="centerX" id="cCv-Ec-fJ2"/>
-                            <constraint firstItem="cW1-74-r4k" firstAttribute="top" secondItem="F1S-aM-6hz" secondAttribute="bottom" id="cxS-UZ-sQC"/>
-                            <constraint firstItem="F1S-aM-6hz" firstAttribute="leading" secondItem="ugd-M7-y0Z" secondAttribute="leading" id="g5G-H1-Z9l"/>
-                            <constraint firstItem="F1S-aM-6hz" firstAttribute="leading" secondItem="ugd-M7-y0Z" secondAttribute="leading" id="tFn-hf-7st"/>
-                            <constraint firstItem="F1S-aM-6hz" firstAttribute="top" secondItem="ugd-M7-y0Z" secondAttribute="top" constant="64" id="xLP-cm-p29"/>
+                            <constraint firstItem="F1S-aM-6hz" firstAttribute="leading" secondItem="ugd-M7-y0Z" secondAttribute="leading" id="7EG-Rn-ho3"/>
+                            <constraint firstAttribute="trailing" secondItem="F1S-aM-6hz" secondAttribute="trailing" id="VbZ-Uw-ZB6"/>
+                            <constraint firstItem="F1S-aM-6hz" firstAttribute="top" secondItem="ugd-M7-y0Z" secondAttribute="top" id="dEm-Yb-YRP"/>
+                            <constraint firstAttribute="centerX" secondItem="F1S-aM-6hz" secondAttribute="centerX" id="jhE-Rg-21t"/>
+                            <constraint firstItem="cW1-74-r4k" firstAttribute="top" secondItem="F1S-aM-6hz" secondAttribute="bottom" id="v9v-B7-wOH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bjZ-lv-Ao0">
@@ -171,7 +161,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vPV-wW-e7y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1994.5" y="1036"/>
+            <point key="canvasLocation" x="1994" y="1036"/>
         </scene>
         <!--Publication EditorTVC-->
         <scene sceneID="vxS-RO-fKE">
