fixed constraints issues

--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp9-FN-pCP">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -99,38 +98,45 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PR-vp-DHe" userLabel="Title">
-                                                    <rect key="frame" x="8" y="0.0" width="212" height="47"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PR-vp-DHe" userLabel="Title">
+                                                    <rect key="frame" x="8" y="8" width="220" height="46"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="47" id="ZWg-gf-B5a"/>
-                                                        <constraint firstAttribute="height" constant="47" id="nQI-si-kop"/>
+                                                        <constraint firstAttribute="width" constant="220" id="DYh-pJ-uQM"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JS-sO-3EK" userLabel="Status">
-                                                    <rect key="frame" x="23" y="46" width="197" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7JS-sO-3EK" userLabel="Status">
+                                                    <rect key="frame" x="23" y="54" width="197" height="19"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="197" id="PT3-Gs-OeQ"/>
+                                                        <constraint firstAttribute="width" constant="197" id="msc-2R-PjC"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Green-dot" translatesAutoresizingMaskIntoConstraints="NO" id="VJr-uC-AAG" userLabel="Status Icon">
-                                                    <rect key="frame" x="8" y="53" width="7" height="7"/>
-                                                </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TEMPFoodIcon" translatesAutoresizingMaskIntoConstraints="NO" id="PRi-xz-AS1" userLabel="FoodImage">
-                                                    <rect key="frame" x="230" y="0.0" width="90" height="90"/>
-                                                    <color key="backgroundColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                                                    <rect key="frame" x="8" y="60" width="7" height="7"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="PRi-xz-AS1" secondAttribute="height" multiplier="1:1" id="PX9-wl-4KQ"/>
+                                                        <constraint firstAttribute="width" constant="7" id="LDd-nP-SOg"/>
+                                                        <constraint firstAttribute="height" constant="7" id="wqL-M4-UUI"/>
                                                     </constraints>
                                                 </imageView>
-                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OjG-g6-qJx" userLabel="Gray Line">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TEMPFoodIcon" translatesAutoresizingMaskIntoConstraints="NO" id="PRi-xz-AS1" userLabel="FoodImage">
+                                                    <rect key="frame" x="243" y="13" width="64" height="64"/>
+                                                    <color key="backgroundColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="100" constant="90" id="hc7-yt-SgB"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="100" constant="90" id="sPW-tx-YaC"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OjG-g6-qJx" userLabel="Gray Line">
                                                     <rect key="frame" x="0.0" y="89" width="320" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="9pc-XU-etS"/>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="zoP-DQ-HnW"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -138,37 +144,43 @@
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="top" id="2aQ-3l-2iJ"/>
-                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" constant="38" id="8aq-Ew-nty"/>
-                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="leading" secondItem="0PR-vp-DHe" secondAttribute="trailing" constant="4" id="8za-Bg-H8F"/>
-                                            <constraint firstItem="0PR-vp-DHe" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" id="9iB-9s-zL6"/>
-                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" id="CdR-Ep-UYt"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="7JS-sO-3EK" secondAttribute="bottom" constant="15" id="EyZ-wR-XTd"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="top" secondItem="7JS-sO-3EK" secondAttribute="bottom" constant="16" id="37F-cU-0mK"/>
+                                            <constraint firstItem="0PR-vp-DHe" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" id="6lg-ee-4g9"/>
+                                            <constraint firstItem="VJr-uC-AAG" firstAttribute="top" secondItem="0PR-vp-DHe" secondAttribute="bottom" constant="6" id="A52-fd-bT8"/>
+                                            <constraint firstItem="0PR-vp-DHe" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leadingMargin" id="FIl-IB-fFy"/>
                                             <constraint firstItem="OjG-g6-qJx" firstAttribute="bottom" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="Gug-7c-akP"/>
+                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="top" secondItem="3Li-R0-6s0" secondAttribute="topMargin" constant="38" id="HlI-64-c24"/>
+                                            <constraint firstAttribute="centerY" secondItem="PRi-xz-AS1" secondAttribute="centerY" id="KUB-hO-1YM"/>
                                             <constraint firstAttribute="centerX" secondItem="PRi-xz-AS1" secondAttribute="centerX" id="KjF-uV-Mfr"/>
+                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="trailing" secondItem="3Li-R0-6s0" secondAttribute="trailingMargin" constant="-5" id="MBW-0w-0PP"/>
                                             <constraint firstItem="VJr-uC-AAG" firstAttribute="centerY" secondItem="7JS-sO-3EK" secondAttribute="centerY" id="Ma5-fo-h1S"/>
-                                            <constraint firstItem="VJr-uC-AAG" firstAttribute="leading" secondItem="0PR-vp-DHe" secondAttribute="leading" id="U9n-7I-gId"/>
-                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leading" id="VNV-xN-09s"/>
+                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="leading" secondItem="VJr-uC-AAG" secondAttribute="trailing" constant="8" id="PKz-cy-0sg"/>
+                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="leading" secondItem="VJr-uC-AAG" secondAttribute="trailing" constant="8" id="Qnt-3k-uXN"/>
                                             <constraint firstItem="OjG-g6-qJx" firstAttribute="top" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="X0K-AC-qz3"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="XWW-lz-Nyw"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="OjG-g6-qJx" secondAttribute="trailing" constant="-8" id="X93-KP-spn"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leadingMargin" constant="-8" id="Z6S-xb-7hD"/>
                                             <constraint firstItem="PRi-xz-AS1" firstAttribute="leading" secondItem="7JS-sO-3EK" secondAttribute="trailing" constant="4" id="Z8d-vc-Jp6"/>
+                                            <constraint firstItem="0PR-vp-DHe" firstAttribute="leading" secondItem="VJr-uC-AAG" secondAttribute="leading" id="Zbf-nx-Bch"/>
                                             <constraint firstItem="OjG-g6-qJx" firstAttribute="top" secondItem="PRi-xz-AS1" secondAttribute="bottom" id="akb-40-pvq"/>
-                                            <constraint firstItem="0PR-vp-DHe" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leadingMargin" id="cmC-vv-GAj"/>
-                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="trailing" secondItem="3Li-R0-6s0" secondAttribute="trailingMargin" id="dGg-28-XgV"/>
                                             <constraint firstItem="PRi-xz-AS1" firstAttribute="leading" secondItem="7JS-sO-3EK" secondAttribute="trailing" constant="4" id="fkT-Qc-YW2"/>
-                                            <constraint firstAttribute="trailing" secondItem="PRi-xz-AS1" secondAttribute="trailing" id="ikd-AN-9Gv"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="PRi-xz-AS1" secondAttribute="trailing" id="rCm-PT-DyH"/>
-                                            <constraint firstItem="PRi-xz-AS1" firstAttribute="centerY" secondItem="3Li-R0-6s0" secondAttribute="centerY" id="sKq-Ed-jhb"/>
-                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="bottom" secondItem="3Li-R0-6s0" secondAttribute="bottomMargin" id="vLd-3D-QJx"/>
-                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leadingMargin" constant="15" id="wUE-tF-Rhh"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="top" secondItem="7JS-sO-3EK" secondAttribute="bottom" constant="16" id="lDT-Qa-Odz"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="OjG-g6-qJx" secondAttribute="bottom" constant="-8" id="npO-C6-eeh"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="OjG-g6-qJx" secondAttribute="bottom" constant="-8" id="uBK-pA-NQF"/>
+                                            <constraint firstItem="OjG-g6-qJx" firstAttribute="leading" secondItem="3Li-R0-6s0" secondAttribute="leadingMargin" constant="-8" id="wB4-O4-vCC"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="OjG-g6-qJx" secondAttribute="bottom" constant="-8" id="xdL-W5-tY4"/>
+                                            <constraint firstItem="7JS-sO-3EK" firstAttribute="top" secondItem="0PR-vp-DHe" secondAttribute="bottom" id="y5l-zy-gut"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="OjG-g6-qJx" secondAttribute="bottom" constant="-8" id="zms-C4-PjV"/>
                                         </constraints>
                                         <size key="customSize" width="320" height="90"/>
                                         <variation key="default">
                                             <mask key="constraints">
+                                                <exclude reference="HlI-64-c24"/>
+                                                <exclude reference="Qnt-3k-uXN"/>
                                                 <exclude reference="Gug-7c-akP"/>
                                                 <exclude reference="X0K-AC-qz3"/>
                                                 <exclude reference="akb-40-pvq"/>
                                                 <exclude reference="KjF-uV-Mfr"/>
+                                                <exclude reference="Z8d-vc-Jp6"/>
                                                 <exclude reference="fkT-Qc-YW2"/>
                                             </mask>
                                         </variation>
@@ -189,10 +201,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="F1S-aM-6hz" firstAttribute="leading" secondItem="ugd-M7-y0Z" secondAttribute="leading" id="7EG-Rn-ho3"/>
+                            <constraint firstItem="cW1-74-r4k" firstAttribute="top" secondItem="F1S-aM-6hz" secondAttribute="bottom" id="BUb-9X-hiG"/>
                             <constraint firstAttribute="trailing" secondItem="F1S-aM-6hz" secondAttribute="trailing" id="VbZ-Uw-ZB6"/>
                             <constraint firstItem="F1S-aM-6hz" firstAttribute="top" secondItem="ugd-M7-y0Z" secondAttribute="top" id="dEm-Yb-YRP"/>
                             <constraint firstAttribute="centerX" secondItem="F1S-aM-6hz" secondAttribute="centerX" id="jhE-Rg-21t"/>
-                            <constraint firstItem="cW1-74-r4k" firstAttribute="top" secondItem="F1S-aM-6hz" secondAttribute="bottom" id="v9v-B7-wOH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="My Publications" id="bjZ-lv-Ao0">
@@ -208,7 +220,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vPV-wW-e7y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1994" y="1036"/>
+            <point key="canvasLocation" x="1996" y="1024"/>
         </scene>
         <!--Publication EditorTVC-->
         <scene sceneID="vxS-RO-fKE">
